--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-image-mapper": "0.0.15",
+    "react-router": "^5.1.2",
     "react-scripts": "3.4.0"
   },
   "scripts": {
@@ -31,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
